# bushel

./: .gitignore  AGENT.md  ARCH.md  CLAUDE.md  Dockerfile  README.md  SPEC.md  bushel.opam  bushel.opam.template  bushel.py  dune-project  graphql_schema.json  karakeep.opam  peertube.opam  pyproject.toml  typesense-client.opam
karakeep/: dune  karakeep.ml  karakeep.mli
lib/: bushel.ml  bushel.mli  contact.ml  contact.mli  description.ml  description.mli  doi_entry.ml  doi_entry.mli  dune  entry.ml  entry.mli  idea.ml  idea.mli  link.ml  link.mli  link_graph.ml  md.ml  md.mli  news.ml  news.mli  note.ml  note.mli  paper.ml  paper.mli  project.ml  project.mli  srcsetter.ml  srcsetter.mli  tags.ml  tags.mli  typesense.ml  typesense.mli  util.ml  video.ml  video.mli
peertube/: dune  peertube.ml  peertube.mli
peertube/test/: dune  peertube_test.ml
peertube/test/samples/: crank_response.json  eeg_response.json  ocaml_response.json
src/: backlinks.ml  bushel.ml  contents.ml  dune  github.ml  github_cookie_jar.ml  github_cookie_jar.mli  graphql.ml  link.ml  post.ml  ptime_ext.ml  queries.ml  repository.ml  site.ml  stores.ml  summary_generator.ml  tags.ml
typesense-client/: dune  typesense_client.ml  typesense_client.mli
